--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "src/app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "build": "rimraf ./build && tsc",
     "start": "npm run build && node build/index.js",
     "start:dev": "npx nodemon",
@@ -20,23 +20,27 @@
     "npm": "^9.6.4"
   },
   "devDependencies": {
+    "@jest/globals": "^29.6.4",
     "@types/express": "^4.17.17",
+    "@types/jest": "^29.5.4",
     "@types/node": "^18.14.1",
     "@typescript-eslint/eslint-plugin": "^6.5.0",
     "@typescript-eslint/parser": "^6.5.0",
     "concurrently": "^7.6.0",
     "eslint": "^8.48.0",
     "husky": "^8.0.3",
+    "jest": "^29.6.4",
     "nodemon": "^2.0.22",
     "prettier": "^3.0.3",
     "rimraf": "^5.0.1",
+    "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.5"
   },
   "husky": {
     "hooks": {
-      "pre-commit": "npm run prettier-format && npm run lint",       
-      "pre-push": ""         
+      "pre-commit": "npm run prettier-format && npm run lint",
+      "pre-push": ""
     }
   }
 }
